plain-k8s/canary/ingress/ingress-blue.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-ingress
spec:
  rules:
  - host: canary.local
    http:
      paths:
      - path: /
        backend:
          serviceName: blue-app
          servicePort: 8080
